Fixed some spacing and sizing issues with hero and floater

--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ a {
 
 /*Wrapper*/
 .content-wrapper {
-    max-width: 85%;
+    max-width: 92%;
     margin: auto;
     position: relative;
 }
@@ -220,8 +220,8 @@ Molecules & Organisms
 /*Availability Floater*/
 .availability-floater{
     position: fixed;
-    bottom: 50px;
-    right: 5%;
+    bottom: 30px;
+    right: 3%;
     z-index: 2;
     background-color: var(--white);
     border-radius: 100px;
@@ -233,7 +233,6 @@ Molecules & Organisms
     padding: 3px 3px 3px 16px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
 }
-/*The shadow obviously doesn't show up against the dark background here, but I wanted to include it so I'd have it ready for the actual page when this has a fixed position*/
 
 .availability-floater:hover {
     background-color: rgba(255, 255, 255, 0.9);
@@ -290,32 +289,32 @@ a.availability-floater {
     overflow: hidden;
 }
 .hero__images{
-    min-height: 800px;
+    min-height: 700px;
 }
 
 .hero__img--left {
-    width: 33%;
+    width: 35%;
     position: absolute;
-    left: -100px;
+    left: -120px;
     bottom: 0;
 }
 .hero__img--middle {
-    width: 33%;
+    width: 35%;
     position: absolute;
     bottom: 100px;
     left: 30%;
 }
 .hero__img--right {
-    width: 33%;
+    width: 35%;
     position: absolute;
     bottom: 0;
-    left: 66%;
+    left: 68%;
     z-index: 1;
 }
 .hero__img--far-right {
-    width: 33%;
+    width: 35%;
     position: absolute;
-    right: -100px;
+    right: -140px;
     bottom: 35%;
 }
 
